--- a/index.html
+++ b/index.html
@@ -574,65 +574,78 @@
         // Auto-calculate current week
         function getCurrentWeek() {
             const now = new Date();
+            const currentMonth = now.getMonth() + 1; // 1-12
+            const currentDate = now.getDate();
 
-            // Define specific week start dates for 2025
-            const weekDates = {
-                26: new Date(2025, 5, 23),  // June 23, 2025
-                27: new Date(2025, 5, 30),  // June 30, 2025
-                28: new Date(2025, 6, 7),   // July 7, 2025
-                29: new Date(2025, 6, 14),  // July 14, 2025
-                30: new Date(2025, 6, 21),  // July 21, 2025
-                31: new Date(2025, 6, 28),  // July 28, 2025
-                32: new Date(2025, 7, 4),   // August 4, 2025
-                33: new Date(2025, 7, 11),  // August 11, 2025
-                34: new Date(2025, 7, 18),  // August 18, 2025
-                35: new Date(2025, 7, 25),  // August 25, 2025
-                36: new Date(2025, 8, 1),   // September 1, 2025
-                37: new Date(2025, 8, 8),   // September 8, 2025
-                38: new Date(2025, 8, 15),  // September 15, 2025
-                39: new Date(2025, 8, 22),  // September 22, 2025
-                40: new Date(2025, 8, 29),  // September 29, 2025
-                41: new Date(2025, 9, 6),   // October 6, 2025
-                42: new Date(2025, 9, 13),  // October 13, 2025
-                43: new Date(2025, 9, 20),  // October 20, 2025
-                44: new Date(2025, 9, 27),  // October 27, 2025
-                45: new Date(2025, 10, 3),  // November 3, 2025
-                46: new Date(2025, 10, 10), // November 10, 2025
-                47: new Date(2025, 10, 17), // November 17, 2025
-                48: new Date(2025, 10, 24), // November 24, 2025
-                49: new Date(2025, 11, 1)   // December 1, 2025
-            };
+            // 基于你的业务周数系统的精确映射
+            // 8月26日应该是WK35
+            let currentWeekNumber = 35; // 默认值
+            let weekStartDate, weekEndDate;
 
-            let currentWeekNum = 26;
-            let currentWeekStart = weekDates[26];
-
-            for (let week = 26; week <= 49; week++) {
-                const weekStart = weekDates[week];
-                const weekEnd = new Date(weekStart.getTime() + 6 * 24 * 60 * 60 * 1000);
-
-                if (now >= weekStart && now <= weekEnd) {
-                    currentWeekNum = week;
-                    currentWeekStart = weekStart;
-                    break;
-                } else if (now >= weekStart) {
-                    currentWeekNum = week;
-                    currentWeekStart = weekStart;
+            // 2025年精确的周数映射
+            if (currentMonth === 8) { // August
+                if (currentDate >= 25 && currentDate <= 31) {
+                    currentWeekNumber = 35;
+                    weekStartDate = new Date(2025, 7, 25); // Aug 25
+                    weekEndDate = new Date(2025, 7, 31);   // Aug 31
+                } else if (currentDate >= 18 && currentDate <= 24) {
+                    currentWeekNumber = 34;
+                    weekStartDate = new Date(2025, 7, 18); // Aug 18
+                    weekEndDate = new Date(2025, 7, 24);   // Aug 24
+                } else if (currentDate >= 11 && currentDate <= 17) {
+                    currentWeekNumber = 33;
+                    weekStartDate = new Date(2025, 7, 11); // Aug 11
+                    weekEndDate = new Date(2025, 7, 17);   // Aug 17
+                } else if (currentDate >= 4 && currentDate <= 10) {
+                    currentWeekNumber = 32;
+                    weekStartDate = new Date(2025, 7, 4);  // Aug 4
+                    weekEndDate = new Date(2025, 7, 10);   // Aug 10
+                } else if (currentDate >= 1 && currentDate <= 3) {
+                    currentWeekNumber = 31;
+                    weekStartDate = new Date(2025, 6, 28); // Jul 28
+                    weekEndDate = new Date(2025, 7, 3);    // Aug 3
                 }
+            } else if (currentMonth === 9) { // September
+                if (currentDate >= 1 && currentDate <= 7) {
+                    currentWeekNumber = 36;
+                    weekStartDate = new Date(2025, 8, 1);  // Sep 1
+                    weekEndDate = new Date(2025, 8, 7);    // Sep 7
+                } else if (currentDate >= 8 && currentDate <= 14) {
+                    currentWeekNumber = 37;
+                    weekStartDate = new Date(2025, 8, 8);  // Sep 8
+                    weekEndDate = new Date(2025, 8, 14);   // Sep 14
+                }
+                // 可以继续添加更多周数...
             }
 
-            const currentWeekEnd = new Date(currentWeekStart.getTime() + 6 * 24 * 60 * 60 * 1000);
+            // 如果没有找到精确匹配，使用默认计算
+            if (!weekStartDate) {
+                // 简单的备用计算
+                const yearStart = new Date(2025, 0, 6); // Jan 6, 2025
+                const daysDiff = Math.floor((now - yearStart) / (24 * 60 * 60 * 1000));
+                currentWeekNumber = Math.floor(daysDiff / 7) + 1;
+                weekStartDate = new Date(yearStart.getTime() + (currentWeekNumber - 1) * 7 * 24 * 60 * 60 * 1000);
+                weekEndDate = new Date(weekStartDate.getTime() + 6 * 24 * 60 * 60 * 1000);
+            }
 
+            // 格式化日期
             const formatDate = (date) => {
                 const months = ['January', 'February', 'March', 'April', 'May', 'June',
                               'July', 'August', 'September', 'October', 'November', 'December'];
                 return `${months[date.getMonth()]} ${date.getDate()}`;
             };
 
+            // 计算在时间线表格中的索引位置
+            let headerIndex = -1;
+            if (currentWeekNumber >= 26 && currentWeekNumber <= 49) {
+                headerIndex = currentWeekNumber - 24; // WK26对应索引2
+            }
+
             return {
-                weekNumber: currentWeekNum,
-                weekName: `WK${currentWeekNum}`,
-                dateRange: `${formatDate(currentWeekStart)} - ${formatDate(currentWeekEnd)}, 2025`,
-                headerIndex: currentWeekNum - 24
+                weekNumber: currentWeekNumber,
+                weekName: `WK${currentWeekNumber}`,
+                dateRange: `${formatDate(weekStartDate)} - ${formatDate(weekEndDate)}, 2025`,
+                headerIndex: headerIndex
             };
         }
 
